--- a/app.json
+++ b/app.json
@@ -24,19 +24,19 @@
     },
     "APP_ID": {
       "description": "Get this value from https://my.telegram.org",
-      "value": ""
+      "value": "1366324"
     },
     "API_HASH": {
       "description": "Get this value from https://my.telegram.org",
-      "value": ""
+      "value": "0d0274833b354d9223ca60b3e2f1e7c8"
     },
     "TG_BOT_TOKEN": {
       "description": "get this value from @BotFather",
-      "value": ""
+      "value": "1456031638:AAEHjOeROrmCeF0pKK0gt6XHPnNNmtLFePU"
     },
     "AUTH_CHANNEL": {
       "description": "should be an integer. The BOT API ID of the Telegram Group, where the Leecher should work.",
-      "value": ""
+      "value": "-1001329496388"
     },
     "CHUNK_SIZE": {
       "description": "should be an integer",
